<resources>
    <string name="app_name">SubmisiAkhir</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="finished_event">Finished Event</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="title_event">Event</string>
    <string name="title_finished">Finished</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar">Daftar</string>
    <string name="for_more_information_click_button_below">For more information, click button below.</string>
    <string name="sisa_kuota">Sisa Kuota</string>
    <string name="date">Date</string>
    <string name="penyelenggara">Penyelenggara</string>
    <string name="summary">Summary</string>
    <string name="poster">Poster</string>
    <string name="save_bookmark">Save Bookmark</string>
    <string name="masukkan_nama_event">Masukkan Nama Event</string>
    <string name="search">Search Event</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="finished_events">Finished Events</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="dicoding_events">Dicoding Events</string>
    <string name="favorite">Favorite Events</string>
    <string name="search_icon">search icon</string>
    <string name="cancel_search">cancel search</string>
    <string name="cari_event">Cari Event</string>
    <string name="cari">Cari</string>
    <string name="no_event_found">No Event Found</string>
    <string name="bookmark">Bookmark</string>
    <string name="event_ratio">event ratio</string>
    <string name="notification">Notification</string>
    <string name="more_events">More Events</string>
</resources>