<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/event_24dp"
        android:title="@string/title_event" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search_24dp"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/settings_24dp"
        android:title="@string/setting"/>

    <item
        android:id="@+id/navigation_bookmark"
        android:icon="@drawable/bookmark_24dp"
        android:title="@string/favorite"/>

</menu>